--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -709,6 +709,51 @@
     "icon": "visibility_off"
   },
   {
+    "section": "workspaceFocusedBorderEnabled",
+    "label": "Focused Border",
+    "tabIndex": 4,
+    "category": "Workspaces",
+    "keywords": [
+      "around",
+      "border",
+      "desktop",
+      "focused",
+      "indicator",
+      "outline",
+      "ring",
+      "show",
+      "spaces",
+      "virtual",
+      "virtual desktops",
+      "workspace",
+      "workspaces"
+    ],
+    "description": "Show an outline ring around the focused workspace indicator"
+  },
+  {
+    "section": "workspaceFollowFocus",
+    "label": "Follow Monitor Focus",
+    "tabIndex": 4,
+    "category": "Workspaces",
+    "keywords": [
+      "currently",
+      "desktop",
+      "desktops",
+      "focus",
+      "focused",
+      "follow",
+      "monitor",
+      "show",
+      "spaces",
+      "virtual",
+      "virtual desktops",
+      "workspace",
+      "workspaces"
+    ],
+    "description": "Show workspaces of the currently focused monitor",
+    "conditionKey": "isNiri"
+  },
+  {
     "section": "groupWorkspaceApps",
     "label": "Group Workspace Apps",
     "tabIndex": 4,
@@ -750,29 +795,6 @@
       "workspaces"
     ],
     "icon": "label"
-  },
-  {
-    "section": "workspacesPerMonitor",
-    "label": "Per-Monitor Workspaces",
-    "tabIndex": 4,
-    "category": "Workspaces",
-    "keywords": [
-      "belonging",
-      "desktop",
-      "desktops",
-      "monitor",
-      "multi-monitor",
-      "per",
-      "per-monitor",
-      "show",
-      "spaces",
-      "specific",
-      "virtual",
-      "virtual desktops",
-      "workspace",
-      "workspaces"
-    ],
-    "description": "Show only workspaces belonging to each specific monitor."
   },
   {
     "section": "reverseScrolling",
@@ -871,6 +893,31 @@
       "workspaces"
     ],
     "description": "Display application icons in workspace indicators",
+    "conditionKey": "isNiri"
+  },
+  {
+    "section": "workspaceAppearance",
+    "label": "Workspace Appearance",
+    "tabIndex": 4,
+    "category": "Workspaces",
+    "keywords": [
+      "appearance",
+      "around",
+      "border",
+      "desktop",
+      "focused",
+      "indicator",
+      "outline",
+      "ring",
+      "show",
+      "spaces",
+      "virtual",
+      "virtual desktops",
+      "workspace",
+      "workspaces"
+    ],
+    "icon": "palette",
+    "description": "Show an outline ring around the focused workspace indicator",
     "conditionKey": "isNiri"
   },
   {
